tests/should_fail/terminates/recursion_with_substitution.coma
module M_recursion_with_substitution__qyi7749955824043068866__sub [#"recursion_with_substitution.rs" 27 4 27 31] (* <u32 as MyTrait> *)
  let%span srecursion_with_substitution = "recursion_with_substitution.rs" 25 15 25 30
  let%span srecursion_with_substitution'0 = "recursion_with_substitution.rs" 26 14 26 35
  
  use creusot.int.UInt32
  use mach.int.Int
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec sub[#"recursion_with_substitution.rs" 27 4 27 31] (self:UInt32.t) (x:UInt32.t) (return'  (x'0:UInt32.t))= {[@expl:sub requires] [%#srecursion_with_substitution] UInt32.t'int self
    - UInt32.t'int x
    >= 0}
    (! bb0
    [ bb0 = s0 [ s0 = UInt32.sub {self'0} {x'0} (fun (_ret:UInt32.t) ->  [ &_0 <- _ret ] s1) | s1 = return''0 {_0} ]  ]
    ) [ & _0: UInt32.t = Any.any_l () | & self'0: UInt32.t = self | & x'0: UInt32.t = x ] 
    [ return''0 (result:UInt32.t)-> {[@expl:sub ensures] [%#srecursion_with_substitution'0] UInt32.t'int result
      = UInt32.t'int self - UInt32.t'int x}
      (! return' {result}) ]

end
module M_recursion_with_substitution__foo [#"recursion_with_substitution.rs" 36 0 36 53]
  let%span srecursion_with_substitution = "recursion_with_substitution.rs" 37 8 37 9
  let%span srecursion_with_substitution'0 = "recursion_with_substitution.rs" 36 37 36 42
  let%span srecursion_with_substitution'1 = "recursion_with_substitution.rs" 35 10 35 24
  let%span srecursion_with_substitution'2 = "recursion_with_substitution.rs" 33 10 33 15
  
  use creusot.int.UInt32
  use creusot.prelude.Any
  
  type t_T
  
  predicate inv (_0: t_T)
  
  predicate resolve (_0: t_T)
  
  let rec foo (arg_0:UInt32.t) (return'  (x:UInt32.t))= any
    [ return''0 (result:UInt32.t)-> {[%#srecursion_with_substitution'1] result = (0: UInt32.t)} (! return' {result}) ]
  
  
  predicate well_founded_relation (self: t_T) (other: t_T)
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec foo'0[#"recursion_with_substitution.rs" 36 0 36 53] (arg_0:t_T) (return'  (x:UInt32.t))= {[@expl:foo 'arg_0' type invariant] [%#srecursion_with_substitution'0] inv arg_0}
    (! bb0
    [ bb0 = s0
      [ s0 = {[@expl:type invariant] inv arg_0'0} s1
      | s1 = -{resolve arg_0'0}- s2
      | s2 = foo'1 {[%#srecursion_with_substitution] (0: UInt32.t)} (fun (_ret:UInt32.t) ->  [ &_0 <- _ret ] s3)
      | s3 = bb2 ]
    
    | bb2 = return''0 {_0} ]
    )
    [ foo'1 (arg_0'1:UInt32.t) (_ret  (_r:UInt32.t))-> {[@expl:function variant] well_founded_relation function_variant arg_0}
      foo {arg_0'1} (_ret) ]
    
    [ & _0: UInt32.t = Any.any_l ()
    | & arg_0'0: t_T = arg_0
    | function_variant: t_T = [%#srecursion_with_substitution'2] arg_0 ]
    
    [ return''0 (result:UInt32.t)-> {[@expl:foo ensures] [%#srecursion_with_substitution'1] result = (0: UInt32.t)}
      (! return' {result}) ]

end
module M_recursion_with_substitution__qyi7749955824043068866__sub__refines [#"recursion_with_substitution.rs" 27 4 27 31] (* <u32 as MyTrait> *)
  let%span srecursion_with_substitution = "recursion_with_substitution.rs" 27 4 27 31
  let%span srecursion_with_substitution'0 = "recursion_with_substitution.rs" 21 8 21 12
  
  use creusot.int.UInt32
  use mach.int.Int
  
  function as_int [#"recursion_with_substitution.rs" 20 4 20 26] (self: UInt32.t) : UInt32.t =
    [%#srecursion_with_substitution'0] self
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  goal refines: [%#srecursion_with_substitution] forall self: UInt32.t. forall x: UInt32.t. UInt32.t'int (as_int self)
  - UInt32.t'int x
  >= 0
   -> UInt32.t'int self - UInt32.t'int x >= 0
  /\ (forall result: UInt32.t. UInt32.t'int result = UInt32.t'int self - UInt32.t'int x
   -> UInt32.t'int result = UInt32.t'int (as_int self) - UInt32.t'int x)
end
